refactor: migrate Arrays.asList() to List.of() for JDK 17
- Replace Arrays.asList() with List.of() in FpRule.getMethods()
- Use JDK 9+ immutable collection factory method
- Improve code modernization and type safety
- Compilation verified successfully

Related: CLEANUP-812